# AgentRAG

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  logger.py  main.py  models.py
backend/app/api/: __init__.py  chat.py  documents.py
backend/app/generation/: __init__.py  llm.py  prompt.py
backend/app/ingestion/: __init__.py  embedder.py  parser.py  splitter.py
backend/app/retrieval/: __init__.py  bm25.py  orchestrator.py  rerank.py  rrf.py  vector_store.py
frontend/: .dockerignore  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/documents/: page.tsx
