[project]
name = "rag-backend"
version = "0.1.0"
description = "Self-built RAG system backend (FastAPI + Milvus + DeepSeek)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "pymilvus>=2.4.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "unstructured>=0.13.0",
    "python-docx>=1.1.0",
    "pypdf>=4.2.0",
    "markdown>=3.6",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
